<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TuCanMobile</string>

    <!-- Login -->
    <string name="login_tuid">TU-ID:</string>
    <string name="login_pw">Passwort:</string>
    <string name="login_send">Anmelden</string>
    <string name="login_stay_logged">Passwort merken</string>
    <string name="loginmenu_preferences">Einstellungen</string>
    <string name="loginmenu_changelog">Changelog</string>
    <string name="loginmenu_close">Schließen</string>

    <!-- Hauptmenü -->
    <string name="mm_events_title">Heutige Veranstaltungen:</string>

    <string name="events_subtitle">Übersicht</string>
    <string name="events_subtitle_modules">Meine Module</string>
    <string name="events_subtitle_events">Meine Veranstaltungen</string>
    <string name="events_subtitle_register">Anmeldung</string>
   

    <!-- UI Dynamic -->
    <string name="ui_login">Anmelden…</string>
    <string name="ui_load_data">Lade Daten…</string>
    <string name="ui_calc">Berechne…</string>

    <!-- Preferences -->
    <string name="settings_general">Haupteinstellungen:</string>
    <string name="settings_widget">Widget:</string>
    <string name="settings_misc">Sonstiges:</string>
    <string name="settings_transparency">Hintergrund-Transparenz</string>
    <string name="settings_widget_max_entries">Max. Einträge</string>
    <string name="settings_widget_max_entries_summary">Anzahl an Einträgen, die das Studenplan-Widget höchstens anzeigen soll.</string>
    <string name="settings_transparency_summary">%s%% transparent</string>
    <string name="settings_changelog">Changelog</string>
    <string name="settings_changelog_summary">Auflistung der Neuerungen</string>
    
	
    <!-- Wrong Lang -->
    <string name="general_not_supported_lang">We are sorry to inform you, that this App does currently not support usage, when the TuCan Website is set to English. To use this App, please change back into German. English support will be added in the future.</string>

    <!-- Image Content Description -->
    <string name="img_content_logo">Logo</string>
    
    <!-- DEBUG -->
    <string name="debug_title">DEBUG</string>
    
    <!-- MESSAGES -->
    <string name="messages_from">Von:</string>
    <string name="messages_time">Eingegangen:</string>
    <string name="messages_title">Betreff:</string>
    
    <!-- SCHEDULE -->
    <string name="schedule_today">Heute</string>
    <string name="schedule_tomorrow">Morgen</string>
    
    <!-- Events -->
    <string name="events_none_found">Keine Veranstaltungen gefunden.</string>
    
    
    <!--  Applications -->
    <string	name="application_type">Abschlussart</string>
    <string name="application_field">Fach</string>
    <string name="application_semester">Fachsemester</string>
    <string name="application_status">Status</string>
    <string name="application_begin">Gestartet</string>
    <string name="application_sent">Abgeschickt</string>
    
    <!-- ACRA -->
	<string name="pref_disable_acra">BugReport deaktivieren</string>
	<string name="pref_acra_disabled">Dieser kann private Daten wie den Namen und Inhalte der Seite beinhalten. Durch das abschalten können Fehler nicht genau analysiert werden und somit wohl auch nicht behoben werden.</string>
	<string name="pref_acra_enabled">Dieser kann private Daten wie den Namen und Inhalte der Seite beinhalten. Durch das abschalten können Fehler nicht genau analysiert werden und somit wohl auch nicht behoben werden.</string>
	<string name="site_opt_unknown">Verhalten der Tucan-Seite war unerwartet. Fehler wird an den Entwickler weitergegeben.</string>
    
    <!-- Changelog -->
    <string name="changelog_full_title">Changelog</string>
    <string name="changelog_title">Neuerungen</string>
    <string name="changelog_show_full">Alles anzeigen</string>
    <string name="changelog_ok_button">OK</string>
    
    <!-- Widget -->
    <string name="widget_no_data_msg_title">Fehler: TUCaN.Mobile App</string>
    <string name="widget_no_data_msg">Bitte erst den Stundenplan in App öffnen!</string>
    
</resources>