<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings_general" >

        <!--
        <EditTextPreference android:key="tuid"
			android:title="@string/settings_tuid" android:defaultValue="" />
		<EditTextPreference android:key="pw"
			android:title="@string/settings_pw" android:summary=""
			android:inputType="textPassword" />
        -->
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="acra.disable"
            android:summaryOff="@string/pref_acra_enabled"
            android:summaryOn="@string/pref_acra_disabled"
            android:title="@string/pref_disable_acra" />

        <!--
        <Preference
            android:key="logout"
            android:title="Logout" >
        </Preference>
        -->
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_category_widget"
        android:title="@string/settings_widget" >
        
        <EditTextPreference
            android:defaultValue="25"
            android:inputType="number"
            android:key="widget_max_entries"
            android:summary="@string/settings_widget_max_entries_summary"
            android:title="@string/settings_widget_max_entries" />

        <Preference
            android:defaultValue="0.5"
            android:key="widget_transparency"
            android:title="@string/settings_transparency" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_category_misc"
        android:title="@string/settings_misc" >
        <Preference
            android:key="changelog"
            android:summary="@string/settings_changelog_summary"
            android:title="@string/settings_changelog" >
        </Preference>
        <Preference
            android:key="logout"
            android:title="Logout" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>